--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,7 @@
 <resources>
     <string name="app_name">3 Kingdoms Chess</string>
-    <string name="introduction">i</string>
-    <string name="restart">Game</string>
-    <string name="toggle">Switch</string>
+    <string name="restart">Restart</string>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="player_indicator">Player indicator</string>
