--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,13 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="player_indicator">Player indicator</string>
+    <string name="designer">Chess piece design by Inductiveload, Public domain, via Wikimedia Commons</string>
+    <string name="player_1">Player 1</string>
+    <string name="player_2">Player 2</string>
+    <string name="player_3">Player 3</string>
+    <string name="arrow">arrow</string>
+    <string name="chess_set">chess set</string>
+    <string name="or">or</string>
+    <string name="click_to_reveal_piece">Click to reveal pieces</string>
 
 </resources>
