--- a/app/src/main/res/values-ja-rJP/strings.xml
+++ b/app/src/main/res/values-ja-rJP/strings.xml
@@ -2,17 +2,24 @@
 <resources>
     <string name="app_name">三国チェス</string>
     <string name="restart">リスタート</string>
-    <string name="player_1">プレーヤー 1 (みどり)</string>
-    <string name="player_2">プレーヤー 2 (紫)</string>
-    <string name="player_3">プレーヤー 3 (レッド)</string>
+    <string name="player_1">プレーヤー 1  (緑)</string>
+    <string name="player_2">プレーヤー 2  (紫)</string>
+    <string name="player_3">プレーヤー 3  (赤)</string>
     <string name="or">または</string>
-    <string name="winner_green">みどりの勝利！</string>
+    <string name="winner_green">緑の勝利！</string>
     <string name="winner_purple">紫の勝利！</string>
-    <string name="winner_red">レッドの勝利！</string>
+    <string name="winner_red">赤の勝利！</string>
     <string name="good_game">もう一度する</string>
     <string name="cancel">キャンセル</string>
     <string name="restart_confirm">はい</string>
     <string name="restart_game">再開しますか？</string>
     <string name="click_to_reveal_piece">クリックで駒を表示する</string>
     <string name="dismiss">キャンセル</string>
+    <string name="king_set">キング\nクイーン\n帥\n将</string>
+    <string name="pawn_set">ポーン</string>
+    <string name="rook_set">ルーク</string>
+    <string name="knight_set">ナイト</string>
+    <string name="cannon_set">砲（パオ）\n炮（パオ）</string>
+    <string name="guard_set">士（シー）\n仕（シー）</string>
+    <string name="bishop_set">象（シャン）\n相（シャン）</string>
 </resources>
