--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">三国象棋</string>
-    <string name="player_1">玩家 1 (绿色)</string>
-    <string name="player_2">玩家 2 (紫色)</string>
-    <string name="player_3">玩家 3 (红色)</string>
+    <string name="player_1">玩家 1  (绿色)</string>
+    <string name="player_2">玩家 2  (紫色)</string>
+    <string name="player_3">玩家 3  (红色)</string>
     <string name="or">或</string>
     <string name="click_to_reveal_piece">点一下翻开棋子</string>
     <string name="restart">重来</string>
@@ -15,4 +15,11 @@
     <string name="restart_game">真的吗?</string>
     <string name="cancel">取消</string>
     <string name="restart_confirm">确定</string>
+    <string name="king_set">国王\n皇后\n帅\n将</string>
+    <string name="pawn_set">卒兵</string>
+    <string name="rook_set">城堡\n车</string>
+    <string name="knight_set">骑士\n马</string>
+    <string name="cannon_set">砲/炮</string>
+    <string name="guard_set">士/仕</string>
+    <string name="bishop_set">主教\n象/相</string>
 </resources>
